<resources>
    <string name="app_name">Online Food</string>
    <string name="name">Enter User-Name</string>
    <string name="item">Item</string>
    <string name="button">Login</string>
    <string name="password">Enter Password</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="textview">TextView</string>
    <string name="place_order">Place Order</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="e_food_delivery">E-Food Delivery</string>
    <string name="nexr_day_delivery_cod">Next Day Delivery (COD)</string>
    <string name="variant">Variant</string>
    <string name="my_orders">My Orders</string>
    <string name="time">Time of Order</string>
    <string name="tracking">Tracking Order</string>
    <string name="track">track</string>
    <string name="deliver">deliver</string>
    <string name="my_cart">My Cart</string>
    <string name="total">Total</string>
    <string name="order">order</string>
    <string name="price">price</string>
    <string name="inventory">Inventory</string>
    <string name="items_in_order">Items in Order</string>
    <string name="totalitems">totalitems</string>
    <string name="textview1">TextView</string>
    <string name="timeoforder">timeoforder</string>
    <string name="go"> > </string>
    <string name="quantity">quantity</string>
</resources>
