<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/itemname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:padding="2dp"
        android:text="Medium Text"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#4d4d4d" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="35dp"
        android:text="@string/textview"
        android:textSize="18sp" />

    <Button
        android:id="@+id/add"
        android:layout_width="100dp"
        android:layout_height="42dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/cartbtnlayout"
        android:text="@string/add_to_cart"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/variant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="39dp"
        android:text="@string/variant" />

    <TextView
        android:id="@+id/inventory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="135dp"
        android:layout_marginTop="13dp"
        android:text="@string/inventory" />

    <EditText
        android:id="@+id/quantity"
        android:layout_width="20dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/add"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/quantitybackground"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:text="1"
        android:enabled="false"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/add"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="179dp"
        android:textSize="13sp"
        android:text="Quantity" />

</RelativeLayout>