<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="165dp"
        android:layout_marginTop="19dp"
        android:padding="2dp"
        android:text="Medium Text"
        android:textColor="#4d4d4d"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/itemname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="21dp"
        android:text="@string/textview"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <!--CheckBox
        android:id="@+id/cod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemname"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="184dp"
        android:text="@string/nexr_day_delivery_cod" />

    <Button
        android:id="@+id/place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/price"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="15dp"
        android:text="@string/place_order" /-->

    <TextView
        android:id="@+id/variant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/itemname"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="29dp"
        android:text="@string/variant"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/trackk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemname"
        android:layout_alignParentStart="true"
        android:layout_marginStart="55dp"
        android:text="@string/track"
        android:visibility="invisible"/>

</RelativeLayout>